--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angularfire2": "^4.0.0-rc0",
     "core-js": "^2.4.1",
+    "firebase": "^3.8.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
