--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "vsicons.presets.angular": true
+    "vsicons.presets.angular": true,
+    "typescript.tsdk": "node_modules/typescript/lib"
 }
